--- a/Rich-list node server/package.json
+++ b/Rich-list node server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "firebase": "^9.16.0",
     "firebase-admin": "^11.4.1",
     "mongodb": "^4.9.1",
     "node-fetch": "^3.2.10",
