--- a/Rich-list node server/package.json
+++ b/Rich-list node server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,4 +22,5 @@
     "ripple-binary-codec": "^1.5.0-beta.1",
     "ws": "^8.12.0"
   }
+  
 }
